--- a/PrevisaoClimatica/angular.json
+++ b/PrevisaoClimatica/angular.json
@@ -27,7 +27,9 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css" 
             ]
           },
           "configurations": {
