Feat - Criado Controllers ,models e dtos de resposta da api de clima

--- a/src/PrevisaoClimatica.API/appsettings.json
+++ b/src/PrevisaoClimatica.API/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "OpenWeatherMap": {
+    "ApiKey": "df579b0443c9172ea96eb942d6289ed6", 
+    "BaseUrl": "https://api.openweathermap.org/data/2.5"
+  },
   "ConnectionStrings": {
   "DefaultConnection": "Server=DESKTOP-8FQFVA0\\SQLEXPRESS;Database=SistemaPrevisaoClimatica;Integrated Security=True;TrustServerCertificate=True"
   }
